# synthetic-image-caption-generator

./: .gitignore  README.md  example_usage.py  pyproject.toml
.github/workflows/: pypi-publish.yml
example_dataset/: captions1.txt  captions2.txt
synthetic_image_caption_generator/: __init__.py  caption_generator.py  cli.py  dataset_loader.py
