[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "synthetic-image-caption-generator"
description = "Tool to generate captions to use as input for pre-trained image generation models, aligned with some pre-existing captions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Alex Senden" }]
maintainers = [{ name = "Alex Senden" }]
keywords = [
    "image-generation",
    "machine-learning",
    "captioning",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
]

# Version is automatically provided by hatch-vcs
dynamic = ["version"]

[project.scripts]
generate-captions = "synthetic_image_caption_generator.cli:main"
download-caption-model = "synthetic_image_caption_generator.cli:download_model_cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["synthetic_image_caption_generator/**", "README.md"]

[tool.hatch.build.targets.wheel]
include = ["synthetic_image_caption_generator/**"]
